apollo-federation/src/sources/connect/validation/snapshots/validation_tests@disallowed_abstract_types.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/disallowed_abstract_types.graphql
---
[
    Message {
        code: ConnectorsUnsupportedAbstractType,
        message: "Abstract schema types, such as `interface`, are not supported when using connectors. You can check out our documentation at https://go.apollo.dev/connectors/best-practices#abstract-schema-types-are-unsupported.",
        locations: [
            21:1..21:18,
        ],
    },
    Message {
        code: ConnectorsUnsupportedAbstractType,
        message: "Abstract schema types, such as `union`, are not supported when using connectors. You can check out our documentation at https://go.apollo.dev/connectors/best-practices#abstract-schema-types-are-unsupported.",
        locations: [
            25:1..25:12,
        ],
    },
]
