apollo-federation/src/sources/connect/validation/snapshots/validation_tests@empty_selection.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/empty_selection.graphql
---
[
    Message {
        code: InvalidSelection,
        message: "`@connect(selection:)` on `Query.resources` is empty",
        locations: [
            13:18..13:29,
        ],
    },
    Message {
        code: InvalidBody,
        message: "`@connect(http: {body:})` on `Query.resources` is empty",
        locations: [
            12:41..12:45,
        ],
    },
]
