apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_nested_paths_in_header_variables.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_nested_paths_in_header_variables.graphql
---
[
    Message {
        code: UndefinedField,
        message: "In `@connect(http.headers:)` on `Query.scalar`: `String` does not have a field named `blah`.",
        locations: [
            13:60..13:64,
        ],
    },
    Message {
        code: UndefinedField,
        message: "In `@connect(http.headers:)` on `Query.object`: `InputObject` does not have a field named `fieldThatDoesntExist`.",
        locations: [
            23:59..23:79,
        ],
    },
    Message {
        code: UndefinedField,
        message: "In `@connect(http.headers:)` on `Query.enum`: `Enum` does not have a field named `cantHaveFields`.",
        locations: [
            33:56..33:70,
        ],
    },
    Message {
        code: UndefinedField,
        message: "In `@connect(http.headers:)` on `Object.newField`: `Object` does not have a field named `fieldThatDoesntExist`",
        locations: [
            47:53..47:73,
        ],
    },
]
