apollo-federation/src/sources/connect/validation/snapshots/validation_tests@missing_connect_on_query_field.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/missing_connect_on_query_field.graphql
---
[
    Message {
        code: ConnectorsUnresolvedField,
        message: "No connector resolves field `Query.resources`. It must have a `@connect` directive or appear in `@connect(selection:)`.",
        locations: [
            9:5..9:26,
        ],
    },
]
